# mkprov

./: .gitignore  Cargo.toml  rustfmt.toml
.github/workflows/: rust-ci.yml
_old/cli/: Cargo.toml  common.rs
_old/cli/commands/ls/: mod.rs  provs.rs
_old/cli/commands/prov/: mv_area.rs  own.rs
_old/cli/common/: config.rs
_old/cli/paradox_file/: Cargo.toml  lexer.rs  parser.rs
_old/cli/paradox_file/file/: mod.rs  pdx.rs
_old/cli/paradox_file/parsed_structure/: mutation.rs  to_string.rs
_old/cli/tests/: Cargo.toml  tests.rs
_old/cli/tests/pdx_parsing/: mod.rs
cli/: cli_data.rs  main.rs
cli/commands/: cfg.rs
cli/commands/prov/: convert.rs  cp.rs  mk.rs  mod.rs  rn.rs
common/: Cargo.toml  color.rs  lib.rs
mkprov/: Cargo.toml  common.rs  main.rs
mkprov/action/: mod.rs
mkprov/base_commands/: cfg.rs
mkprov/commands/: area.rs  cfg.rs  config.rs  convert.rs  copy.rs  cp.rs  definition_list.rs  list.rs  mk.rs  mv_area.rs  own.rs  rename.rs  rn.rs  safe_make_provs.rs
mkprov/common/: config.rs  files.rs  mod.rs  province.rs
mkprov/country_commands/: mod.rs
mkprov/prov_commands/: convert.rs  cp.rs  mk.rs  mod.rs  mv_area.rs  own.rs  rn.rs
mkprov/query/: mod.rs
mkprov/test/: eu4.rs  mod.rs
mkprov_eu4/: Cargo.toml  lib.rs
mkprov_eu4/common/: mod.rs
mkprov_eu4/query/: action.rs  mod.rs
mkprov_eu4/structure/: mod.rs  province_csv.rs  province_histories.rs
mkprov_lib/: Cargo.toml  lib.rs
mkprov_lib/common/: mod.rs
mkprov_lib/workspace/: combined_folder.rs  from_file.rs  mod.rs  workspace_file.rs
mod_workspace/: Cargo.toml  from_file.rs  lib.rs  workspace_file.rs
mod_workspace/tests/: mod.rs
paradox_file/: Cargo.toml  as_io_err.rs  color.rs  config.rs  files.rs  if_none.rs  ifnone.rs  lexer.rs  lib.rs  localisation.rs  parser.rs  token.rs
paradox_file/file/: localisation.rs
paradox_file/files/: as_filename.rs  definition.rs  localisation.rs  mod.rs  pdx.rs  yml.rs
paradox_file/parsed_structure/: instancing.rs  into.rs  mod.rs  mutation.rs  to_string.rs
paradox_file/tests/: mod.rs
pdxsyn/: Cargo.toml  lib.rs
pdxsyn/data/: literal.rs  mod.rs
pdxsyn/lexing/: lexer.rs  mod.rs  token.rs
pdxsyn/syntax_editing/: mod.rs
pdxsyn/tests/: lexing_tests.rs  tests.rs
src/: main.rs
src/commands/: config.rs  definition_list.rs  list.rs  own.rs  safe_make_provs.rs
src/common/: config.rs  files.rs  mod.rs  province.rs
test_files/: Cargo.toml  lib.rs
test_files/game_files/: adal.txt  dagobah.txt
test_files/massive/: achievements.txt  climate.txt  default.map
test_files/simple/: comment.txt  comments_object.txt  date_object.txt  keyval.txt  wonky_object.txt
tests/: tests.rs
tests/pdx_files/: mod.rs
tests/pdx_lexing/: mod.rs
tests/pdx_parsing/: files.rs  lexing_tests.rs  mod.rs  mutation_tests.rs  parsing_tests.rs
(+22 files in other folders)
