[package]
name = "mkprov"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "mkprov"
path = "main.rs"

[dependencies]
atty = "0.2.14"
clap = { version = "4.5.27", features = ["derive"] }
mkprov-lib = { path = "../mkprov_lib" }
rust-fuzzy-search = "0.1.1"
itertools.workspace = true
cli-prompts = "0.1.0"
tempdir = "0.3.7"
