[package]
name = "mod_workspace"
version = "0.0.1"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
bincode = "1.3.3"
derived-deref.workspace = true
itertools.workspace = true
serde = { version = "1.0.217", features = ["derive"]}
pdxsyn = { path = "../pdxsyn" }
thiserror.workspace = true
encoding_rs = "0.8.35"
csv = "1.3.1"
