[package]
name = "paradox_file"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
thiserror = "1.0.61"
rand = "0.9.0-alpha.1"
serde = { version = "1.0.203", features = ["derive"] }
toml = "0.8.14"
encoding_rs_io = "0.1.7"
encoding_rs = "0.8.34"
codepage = "0.1.1"
csv = "1.3.0"