[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mkprov"
path = "main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap.workspace = true
paradox_file = { path = "../paradox_file" }
common = { path = "../common" }
atty.workspace = true
inquire.workspace = true
